k8s/pong-board/pong-board-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pong-board
  labels:
    app: pong-board
    component: app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: pong-board
        component: app
    spec:
      containers:
      - name: pong-board
        image: syargeau/pongboard:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
      - image: gcr.io/cloudsql-docker/gce-proxy:1.11
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy"]
        args: ["-instances=$(CLOUDSQL_INSTANCE)=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-oauth-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: cloudsql-oauth-credentials
          secret:
            secretName: pong-board-cloudsql-oauth-credentials
