k8s/pong-board/pong-board-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-board
  labels:
    app: pong-board
    component: app
spec:
  selector:
    app: pong-board
    component: app
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
